force-app/main/default/objects/SalesforceContentVersion__x/SalesforceContentVersion__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceContentVersion</externalName>
    <label>Content Version Salesforce</label>
    <pluralLabel>Content Versions Salesforce</pluralLabel>
</CustomObject>