force-app/main/default/objects/SalesforceContentVersion__x/fields/ContentBodyId__c.field-meta.xml
<CustomField>
    <fullName>ContentBodyId__c</fullName>
    <description>ContentBodyId</description>
    <externalDeveloperName>ContentBodyId</externalDeveloperName>
    <label>Content Body ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>