force-app/main/default/objects/SalesforceContentVersion__x/fields/ContentSize__c.field-meta.xml
<CustomField>
    <fullName>ContentSize__c</fullName>
    <description>ContentSize</description>
    <externalDeveloperName>ContentSize</externalDeveloperName>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>