force-app/main/default/objects/SalesforceContentVersion__x/fields/ContentUrl__c.field-meta.xml
<CustomField>
    <fullName>ContentUrl__c</fullName>
    <description>ContentUrl</description>
    <externalDeveloperName>ContentUrl</externalDeveloperName>
    <label>Content URL</label>
    <length>1333</length>
    <type>LongTextArea</type>
</CustomField>