force-app/main/default/objects/SalesforceContentVersion__x/fields/CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Name__c</fullName>
    <description>CreatedBy_Name</description>
    <externalDeveloperName>CreatedBy_Name</externalDeveloperName>
    <label>Created By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>