force-app/main/default/objects/SalesforceContentVersion__x/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <description>FileExtension</description>
    <externalDeveloperName>FileExtension</externalDeveloperName>
    <label>FileExtension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>