force-app/main/default/objects/SalesforceContentVersion__x/fields/FirstPublishLocationId__c.field-meta.xml
<CustomField>
    <fullName>FirstPublishLocationId__c</fullName>
    <description>FirstPublishLocationId</description>
    <externalDeveloperName>FirstPublishLocationId</externalDeveloperName>
    <label>First Publish Location ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>