force-app/main/default/objects/SalesforceContentVersion__x/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>LastModifiedDate</description>
    <externalDeveloperName>LastModifiedDate</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>